spacing fixes review

--- a/main.scss
+++ b/main.scss
@@ -52,6 +52,7 @@ font-size: 16px;
 
 // Header and navbar styles
 header {
+
 //Universal styles
 display: flex;
 color: white;
@@ -263,8 +264,10 @@ text-decoration: none;
  width: 6rem;
 
  @include breakpoint($mobile-breakpoint) {
+    margin-right: 0.5rem;
     height: 4.5rem;
     width: 4.5rem;
+    
  }
 }
 
